Se reestructuro el paquete productDAO a: DAO. El paquete dao contendra todas las clases que interactuen con acceso a datos externos, de persistencia o archivo xml, etc. Se crearon clases en el modulo: com.phoenix.clienteapp.DAO.clientREST para consumir apiREST

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -24,8 +24,7 @@
                              value="#{productView.products}" 
                              selection="#{productView.selectedProducts}"
                              styleClass="products-table"
-                             rowKey="#{product.id}"
-                             >
+                             rowKey="#{product.id}">
                     <f:facet name="header">
                         <div class="products-table-header">
                             <span style="font-weight: bold">PRODUCTS</span>
