Se crearon objetos pojo en la carpeta: models (LoginRequest, LoginResponse y User). Esto objetos se usaran como plantillas para interactuar con los api endpoint

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -5,6 +5,7 @@
     <h:head>
         <title>Bienvenido</title>
     </h:head>
+    #{loginView}
     <h:body>
         <div class="card">
             <h:form id="registrationForm">
