--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -8,7 +8,7 @@
     <h:body>
         <div class="card">
             <h:form id="registrationForm">
-                <p:panel header="Registration Form" style="width: 500px;">
+                <p:panel header="Registrate" style="width: 500px;">
                     <p:messages/>
                     <h:panelGrid columns="2">
                         <p:outputLabel value="Nombre:"/>
