El atributo: yearold se cambio por el valor age en el modelo User.

--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -18,7 +18,7 @@
                         <p:inputText id="lastname" value="#{viewRegister.registerUser.lastname}" label="apellido" />
                         
                         <p:outputLabel value="Edad:"/>
-                        <p:inputText id="yearold" value="#{viewRegister.registerUser.yearold}" label="edad" />
+                        <p:inputText id="yearold" value="#{viewRegister.registerUser.age}" label="edad" />
                         
                         <p:outputLabel value="Usuario:"/>
                         <p:inputText id="username" value="#{viewRegister.registerUser.username}" label="usuario" />
