Se arreglo y se implemento una redireccion en el login cuando el usuario se loggea exitosamente

--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -18,7 +18,7 @@
                         <p:password id="password" value="#{viewLogin.loginUser.password}" label="Password"/>
 
                         <p:outputLabel value=""/>
-                        <p:commandButton action="#{viewLogin.requestLogin}" value="Entrar" update="registrationForm"/>
+                        <p:commandButton action="#{viewLogin.requestLogin}" value="Entrar" />
                     </h:panelGrid>
                 </p:panel>
             </h:form>
