--- a/src/main/webapp/app/home.xhtml
+++ b/src/main/webapp/app/home.xhtml
@@ -7,6 +7,7 @@
     </h:head>
     <h:body>
         <div>Vista protegida por el servlet</div>
+        <h1>Hola mundo</h1>
         <p:button value="Primary" styleClass="ui-button-raised ui-button-flat" />
     </h:body>
 </html>
